--- a/vignettes/Case studies/x2CaseStudyChitosan.Rmd
+++ b/vignettes/Case studies/x2CaseStudyChitosan.Rmd
@@ -122,8 +122,6 @@ World$mutateVars(dfs)
 
 World$UpdateKaas(mergeExisting = F)
 World$fetchData("alpha")
-
-
 ```
 
 ## NewSolver
@@ -209,7 +207,6 @@ ggplot(MassFractions, aes(x = Scale, y = MassFraction, fill = Species)) +
   theme_minimal()
 
 ```
-
 
 We are also interested in concentrations per compartment. For this, we need to ensure that we convert the Equilibrium Mass into the Equilibrium concentration, which we will do below. We need to adjust the concentrations to end up in respective units. We convert concentrations in soil and sediment to ng/kg wet weight. Concentrations in water are converted in ng/L. In air, concentrations are in ng/kg air. The output is in the form of a table, with both the Equilibrium Mass and the concentration in the compartment per species.
 
@@ -308,7 +305,6 @@ kable(Concentration_eq)
 
 *This part is still Work In Progress and in need of additional development.*
 
-
 ### Adjusting Parameters to Match considered Scale
 
 In this case study we are considering emission data only for Europe. By default the 'World' is represented by a nested regional scale, which is not relevant for the current assessment using emissions data only for Europe. Here we use the option to allocate part of the emissions to the regional scale based on the fraction of surface area in order to mimic not having a nested scale. In future one would be interested for instance in including a local or national scale as well. One could adjust the regional scale for this purpose.
@@ -378,6 +374,8 @@ Emissions <-
 Data from an DPMFA model should be prepared to fit the SBoo world. For instance the time unit should be correct, the mass unit is not as important as this will be the same in the output then, but for good measure we use kg. This is the quick and dirty way, a more elegant way is till in progress as mentioned above.
 
 We define the compartments of the emission based on the DMPFA model.
+
+*NOTE* all concentrations need to be in mass unit/s in order for the solver to work. This is due to the fact that the matrix operates in seconds
 
 ```{r Emissions, include=FALSE}
 # TODO: solve for every RUN
@@ -471,7 +469,7 @@ head(SBEmissions2)
 
 ```
 
-### make time dependant emission functions
+### make time dependent emission functions
 
 ```{r approxfuns, include=FALSE}
 SBEmissions3 <- 
@@ -555,20 +553,10 @@ SBsolve4 <- function( tmax = 1e10, nTIMES = 100, Engine, funlist) {
   
 }
 
-# Can also test with xlsx engine
-# read in K matrix from xlsx:
-# K.Matrix <- readxl::read_xlsx("vignettes/Development/Quality control/SBExcel/SimpleBox4plastics 4.03_GO-Chitosan.xlsx", 
-#                               sheet = "engine",
-#                               range = "D8:FB163") |> as.data.frame()
-# 
-# colnames(K.Matrix) <- readxl::read_xlsx("vignettes/Development/Quality control/SBExcel/SimpleBox4plastics 4.03_GO-Chitosan.xlsx", 
-#                               sheet = "engine",
-#                               range = "D3:FB3",
-#                               col_names = FALSE) |> slice(1) |> as.character()
-# 
+
 
 # Solving
-Solution <- SBsolve4(tmax = 25*(365.25*24*3600),
+Solution <- SBsolve4(tmax = 24*(365.25*24*3600),
 nTIMES = 130,
 Engine = World$exportEngineR(),
 funlist = funlist)
@@ -742,7 +730,9 @@ ggplot(s2C, aes(x = time)) +
 
 ```
 
-From mass to concentration In this chunk we will convert the mass output into concentration output by calculating the respective volumes and calculating by this value.
+## From mass to concentration'
+
+In this chunk we will convert the mass output into concentration output by calculating the respective volumes and calculating by this value.
 
 ```{r mass to concentration, include=FALSE}
 # Fetch necessary data
@@ -887,7 +877,8 @@ kable(FinalConcentration)
 
 ```
 
-Here we compare the output of the last step of the dynamic computation to the output of steady state. 
+Here we compare the output of the last step of the dynamic computation to the output of steady state.
+
 ```{r Comparing to Steady state, include = FALSE}
 ##convert to ng
 FinalConcentration <- FinalConcentration %>%
@@ -910,7 +901,10 @@ kable(DiffSteadyDynamic)
 
 
 ```
-Plotting Of Concentrations Here we append all concentrations per compartment for species A, S and P. Subsequently, we plot these results
+
+### Plotting Of Concentrations
+
+Here we append all concentrations per compartment for species A, S and P. Subsequently, we plot these results
 
 ```{r Concentrations Plotting, include=FALSE}
 summed_columns <- list()
@@ -1002,7 +996,7 @@ df_plot <- df_long %>%
   mutate(Value = ifelse(Compartment == "sd2C" & is.na(Value), 0, Value),
          Value = ifelse(Compartment == "aC", Value * 1e9, Value))
 
-# PlottiNG
+# Plottinf
 ggplot(df_plot, aes(x = time, y = Value)) +
   facet_wrap(~ Compartment, scales = "free_y", nrow = 2, labeller = as_labeller(custom_labeller)) +
   geom_line() +
