--- a/vignettes/Development/Quality control/Molecular verification clean.Rmd
+++ b/vignettes/Development/Quality control/Molecular verification clean.Rmd
@@ -1,19 +1,19 @@
 ---
-title: "Model output"
-author: "Joris Quik, Jaap Slootweg, Anne Hids"
-date: "`r Sys.Date()`"
-output: github_document
+title: "10.1 Molecular verification clean"
+author: "Anne Hids"
+date: "2024-07-03"
+output: html_document
 editor_options: 
   chunk_output_type: console
-  markdown: 
-    wrap: 72
 ---
+
 
 ```{r setup, include=FALSE}
 knitr::knit_meta()
 knitr::opts_chunk$set(echo = TRUE)
 ## impossible to generalise? projectRoot <- paste(getwd(), "..", sep = "/")
-projectRoot <- paste(getwd(), "..", "..", sep = "/")
+#projectRoot <- paste(getwd(), "..", "..", sep = "/")
+projectRoot <- "~/GitHub/SimpleBox/SBooScripts"
 knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
 ```
 
@@ -50,31 +50,19 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "1-HYDROXYANTHRAQUINONE", # acid
                           "1-Hexadecanamine, N,N-dimethyl-", # base
                           "1-Chloro-2-nitro-propane", # neutral
-                          "Sb(III)") # metal
-              
-substance <- Potential_substances[3]
+                          "Sb(III)", # metal
+                          "nTiO2_10nm", # nanoparticle (class particle)
+                          "microplastic") # microplastic (class particle)
+substance <- Potential_substances[1]
 source("baseScripts/initWorld_onlyMolec.R")
-
-length(unique(World$kaas$process))
-
-ProcessMolFunctions <- c("k_Adsorption", "k_Advection", "k_Burial",
-                          "k_Degradation", "k_Deposition", "k_Desorption",
-                          "k_Erosion", "k_Escape", 
-                         "k_Leaching", "k_Resuspension", "k_Runoff", "k_Sedimentation", 
-                         "k_Volatilisation")
-
-ProcessMolFunctions[!ProcessMolFunctions %in% unique(World$kaas$process)]
-
-unique(World$kaas$process)
-
 ```
 
-```{r data xlsx and R}
+```{r data xlsx and R, include=FALSE, eval=FALSE}
 #Comparing K's from R model to K's from excel model
 library(openxlsx)
 library(tidyverse)
 #read in K matrix from excel
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.04_20240405_molec_test_",substance,".xlsm") 
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.04_20240405_molec_test.xlsm") #molecular version for now
 
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
@@ -84,16 +72,12 @@ SBexcel.Names <- read.xlsx(SBExcelName,
                   namedRegion = "box_names")
 
 colnames(SBexcel.K) <- SBexcel.Names
+
 SBexcel.K$to <-  as.character(SBexcel.Names)
-
 SBexcel.K <- pivot_longer(SBexcel.K, cols =  as.character(SBexcel.Names), values_to = "k", names_to = "from")
-
-length(SBexcel.K$k)
 
 #adding "from" and "to" acronyms to the R K matrix
 kaas <- as_tibble(World$kaas)
-unique(kaas$fromScale)
-unique(kaas$fromSubCompart)
 
 #R version does not us the acronyms of the excel version, set-up to convert them
 #Note: this map creates the wrong acronym for soil and sediment at global scale, this is fixed afterwards
@@ -131,8 +115,6 @@ kaas <-
   mutate(to = ifelse((toScale == "Tropic" | toScale == "Arctic" | toScale == "Moderate") & 
                        (toSubCompart == "marinesediment" | toSubCompart == "naturalsoil"), str_replace_all(to, c("sd2"="sd","s1"="s")), to))
 
-  
-
 diagonal_excel <- SBexcel.K[SBexcel.K$from == SBexcel.K$to,] #all the diagonals in excel are negative values -> sums of all the "froms" of that compartment
 
 diagonal_R <- 
@@ -140,7 +122,7 @@ diagonal_R <-
 
 ```
 
-```{r diagonal}
+```{r diagonal, include=FALSE}
 #Check for any differences in what compartments there are between versions
 diagonal_R$from[!diagonal_R$from %in% diagonal_excel$from] # "sd0C" "sd0R" were added in sboo v1
 diagonal_excel$from[!diagonal_excel$from %in% diagonal_R$from] #all excel diagonals are in those of R
@@ -173,7 +155,7 @@ itself.*
 *So now the compartments are the correct amount based on fixing
 exclusions in k_Degradation.*
 
-```{r rate_constants}
+```{r rate_constants, include=FALSE}
 #Dataframe of all other boxes
 
 kaas2 <- kaas |>  
@@ -221,29 +203,16 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
 
 ```
 
+## Difference in sedimentation rates
 
-``` {r sedrates before}
+``` {r, include=FALSE}
 
-large_differences_before <- mergedkaas |>
-  filter(relDif > 0.001) 
-
-# print("Differences in k's between R and Excel larger thans 1 percentile")
-# 
-# knitr::kable(large_differences_before, format="markdown")
-# 
-# large_differences_before <- large_differences_before |>
-#   select(from, to, k_R, k_Excel)
+large_differences <- mergedkaas |>
+  filter(relDif > 0.001)
 
 # Differences larger than 1 percentile all have to do with sedimentation/resuspension. 
 
 difference <- kaas |> filter(from == "w1C")
-
-
-SBexcel.sed_ads <- read.xlsx(SBExcelName,
-                             sheet=9,
-                             colNames=FALSE,
-                             cols=c(7,12),
-                             rows=c(148))
 
 ################# Check difference in sedimentation rate #######################  
 
@@ -259,7 +228,7 @@ sed_sea.excel <- read.xlsx(SBExcelName,
                              sheet=9,
                              colNames=FALSE,
                              cols=c(7,12),
-                             rows=148)
+                             rows=154)
 
 print(diff_sed <- sed_sea.excel$X2 - sed_sea.R$k)
 
@@ -315,137 +284,14 @@ kwsd.R <- World$fetchData("kwsd") |>
 
 ```
 
-```{r soil to water check}
-
-s2w <- kaas |>
-  filter(fromSubCompart == "naturalsoil") |>
-  filter(toSubCompart == "sea")
-
-# Diff is in k_runoff or k_erosion
-
-# First check erosion
-erosion.excel <- read.xlsx(SBExcelName,
-                             sheet=10,
-                             colNames=FALSE,
-                             cols=c(7,12),
-                             rows=116)
-
-erosion.R <- s2w |>
-  filter(process == "k_Erosion" & from == "sM")
-
-print((erosion.R$k-erosion.excel$X2))
-
-# There is a difference, check the variables that are used to calculate k_erosion
-
-erosion_vars.excel <- read.xlsx(SBExcelName,
-                             sheet=10,
-                             colNames=FALSE,
-                             cols=c(7,12),
-                             rows=c(68,117:119))
-
-FracRunoff.R <- World$fetchData("FRACrun")
-
-FracRunoff.E <- erosion_vars.excel |>
-  filter(X1 == "FRACrun.sM")
-
-FracRunoff.diff <- FracRunoff.E$X2-FracRunoff.R
-
-print(FracRunoff.diff)
-
-# No difference in FracRun
-
-kscompw.R <- World$fetchData("Kscompw") |>
-  filter(Scale == "Moderate")
-
-kscompw.E <- erosion_vars.excel|>
-  filter(X1 == "Kslw.M")
-
-kscompw.diff <- kscompw.R$Kscompw-kscompw.E$X2
-
-print(kscompw.diff)
-
-## Difference in kscompw is very large, but formula is the same. Check the values used:
-ks_vals.Excel <- read.xlsx(SBExcelName,
-                             sheet=10,
-                             colNames=FALSE,
-                             cols=c(7,12),
-                             rows=c(49,71))
-
-kaw.E <- ks_vals.Excel |>
-  filter(X1 == "Kaw.M")
-
-kaw.R <- World$fetchData("Kacompw") |>
-  filter(Scale == "Moderate")
-
-print(kaw.E$X2-kaw.R$Kacompw)
-
-# Small difference, not the cause of the diff in k_erosion
-
-# Check the diff in kp
-
-kp.E <- ks_vals.Excel |>
-  filter(X1 == "Kp.sM")
-
-kp.R <- World$fetchData("Kp")
-
-# World$SetConst("Kaw25" = NA)
-# 
-# World$UpdateKaas()
-# 
-# World$fetchData("Kp.soil")
-
-Substances <- read.csv("data/Substances.csv")
-
-subst <- Substances |>
-  filter(Substance == substance)
-
-```
-
-``` {r comparison of steady state emissions}
-
-library(stringi)
-
-World$NewSolver("SBsteady")
-
-emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
-
-MW <- World$fetchData("MW")
-
-emissions <- emissions |>
-  mutate(Emis = Emis*1000/(MW*365.25*24*60*60))
-
-SSsolve.R <- World$Solve(emissions)
-
-SSsolve.excel <- read.xlsx(SBExcelName,
-                             sheet=11,
-                             colNames=TRUE,
-                             rows=c(44,45))
-
-SSsolve.excel <- SSsolve.excel |>
-  select(-c(STEADY.STATE, X2)) |>
-  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) 
-
-SSsolve.R <- SSsolve.R |> mutate(Abbr =  paste0(accronym_map[SubCompart], 
-                            accronym_map2[Scale]))
-
-merged_SS_before <- merge(SSsolve.R, SSsolve.excel, by="Abbr", suffixes = c(".R", ".Excel")) |>
-  mutate(absdiff = EqMass.R-EqMass.Excel) |>
-  mutate(reldiff = absdiff/EqMass.R)
-
-print("Difference in emissions between R and Excel")
-
-knitr::kable(merged_SS, format="markdown")
-
-```
-
 ## Perform the same test, but with the setvel in excel altered to the setvel in R
 
-``` {r}
+``` {r, include=FALSE}
 
 source("baseScripts/initWorld_onlyMolec.R")
 
 #read in K matrix from excel
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.04_20240405_molec_test_sv_",substance,".xlsm") 
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.04_20240405_molec_test_sv.xlsm") #molecular version for now
 
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
@@ -456,6 +302,8 @@ SBexcel.Names <- read.xlsx(SBExcelName,
 
 colnames(SBexcel.K) <- SBexcel.Names
 
+#long format version of Excel K matrix
+# colnames(SBexcel.K) <- c("aR",	"w0R",	"w1R",	"w2R",	"sd1R", "sd2R",	"s1R",	"s2R",	"s3R",	"aC",	"w0C",	"w1C",	"w2C",	"sd1C",	"sd2C",	"s1C",	"s2C",	"s3C",	"aM",	"w2M",	"w3M",	"sdM",	"sM",	"aA",	"w2A",	"w3A",	"sdA",	"sA",	"aT",	"w2T",	"w3T",	"sdT",	"sT")
 SBexcel.K$to <-  as.character(SBexcel.Names)
 
 SBexcel.K <- pivot_longer(SBexcel.K, cols =  as.character(SBexcel.Names), values_to = "k", names_to = "from")
@@ -569,177 +417,4 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   scale_color_gradient(low = "green", high = "red") 
 #If you want to inspect per process instead of fromto box: look at the original kaas dataframe
 
-
 ```
-
-## Difference in sedimentation and resuspension rates
-For substances without a class and acids, the largest relative differences between
-k's are related to sedimentation and resuspension. Upon further investigation, it 
-was found that the settling velocities in Excel and R were not exactly the same
-due to Stokes' law being used in R but not in Excel. However, changing the settling
-velocity in Excel to the value used in R only made a minor difference in the k values. 
-
-``` {r sedrates after}
-
-large_differences_after <- mergedkaas |>
-  filter(relDif > 0.001)
-
-# print("Differences in k's between R and Excel larger thans 1 percentile")
-# 
-# knitr::kable(large_differences_after, format="markdown")
-# 
-# large_differences_after <- large_differences_after |>
-#   select(from, to, k_R, k_Excel)
-
-# Differences larger than 1 percentile all have to do with sedimentation/resuspension. 
-
-difference <- kaas |> filter(from == "w1C")
-
-
-SBexcel.sed_ads <- read.xlsx(SBExcelName,
-                             sheet=9,
-                             colNames=FALSE,
-                             cols=c(7,12),
-                             rows=c(148))
-
-################# Check difference in sedimentation rate #######################  
-
-# Chosen k is from sea to marine sediment
-
-sed_sea.R <- kaas |>
-  filter(process == "k_Sedimentation") |>
-  filter(fromScale == "Continental") |>
-  filter(fromSubCompart == "sea") |>
-  filter(toSubCompart == "marinesediment")
-
-sed_sea.excel <- read.xlsx(SBExcelName,
-                             sheet=9,
-                             colNames=FALSE,
-                             cols=c(7,12),
-                             rows=148)
-
-print(diff_sed <- sed_sea.excel$X2 - sed_sea.R$k)
-
-# There is a difference between R and Excel of 1.47*10^-9
-
-# Check if there is a difference between the settling velocities 
-setvel.R <- World$fetchData("SettlVelocitywater") |>
-  filter(Scale == "Continental")
-
-setvel.excel <- read.xlsx(SBExcelName,
-                             sheet=9,
-                             colNames=FALSE,
-                             cols=c(7,10),
-                             rows=163)
-
-print(diff_set <- setvel.excel$X2 - setvel.R$SettlVelocitywater) 
-
-# There is a difference between the setting velocities of 3.5*10^-8 
-
-# Check if there is a difference between the fractions in water
-frinw.R <- World$fetchData("FRinw") |>
-  filter(Scale == "Continental") |>
-  filter(SubCompart == "sea")
-
-frinw.excel <- read.xlsx(SBExcelName,
-                             sheet=9,
-                             colNames=FALSE,
-                             cols=c(7,12),
-                             rows=84)
-
-print(diff_frinw <- frinw.excel$X2-frinw.R$FRinw)
-
-# No difference in fraction in water between excel and R. 
-
-# Adsorption comparison
-ads.R <- kaas |>
-  filter(process == "k_Adsorption") |>
-  filter(fromScale == "Continental") |>
-  filter(fromSubCompart == "sea")
-
-ads.excel <- read.xlsx(SBExcelName,
-                             sheet=9,
-                             colNames=FALSE,
-                             cols=c(7,12),
-                             rows=164)
-
-print(diff_ads <- ads.excel$X2-ads.R$k)
-
-# Difference is 5.14*10^-11
-
-kwsd.R <- World$fetchData("kwsd") |>
-  filter(SubCompart == "sea" | SubCompart == "marinesediment")
-
-```
-
-``` {r comparison of steady state emissions}
-
-library(stringi)
-
-World$NewSolver("SBsteady")
-
-emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
-
-MW <- World$fetchData("MW")
-
-emissions <- emissions |>
-  mutate(Emis = Emis*1000/(MW*365.25*24*60*60))
-
-SSsolve.R <- World$Solve(emissions)
-
-SSsolve.excel <- read.xlsx(SBExcelName,
-                             sheet=11,
-                             colNames=TRUE,
-                             rows=c(44,45))
-
-SSsolve.excel <- SSsolve.excel |>
-  select(-c(STEADY.STATE, X2)) |>
-  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) 
-
-SSsolve.R <- SSsolve.R |> mutate(Abbr =  paste0(accronym_map[SubCompart], 
-                            accronym_map2[Scale]))
-
-merged_SS_after <- merge(SSsolve.R, SSsolve.excel, by="Abbr", suffixes = c(".R", ".Excel")) |>
-  mutate(absdiff = EqMass.R-EqMass.Excel) |>
-  mutate(reldiff = absdiff/EqMass.R)
-
-print("Difference in emissions between R and Excel")
-
-knitr::kable(merged_SS, format="markdown")
-
-```
-
-``` {r comparison of relative differences k's}
-
-merged_diffs_k <- merge(large_differences_before, large_differences_after, by= c("from", "to"), suffixes=c(".Before", ".After")) |>
-  select(-k_R.After) |>
-  rename(k_R = k_R.Before) |>
-  mutate(abs_diff_before = k_R-k_Excel.Before) |>
-  mutate(abs_diff_after = k_R-k_Excel.After) |>
-  mutate(relDif_before = abs_diff_before/k_R) |>
-  mutate(relDif_after = abs_diff_after/k_R) |>
-  mutate(relDif_change = relDif_after-relDif_before)
-
-print("Change in relative differences before and after changing excel values (k's)")
-
-knitr::kable(merged_diffs_k, format="markdown")
-
-``` 
-
-``` {r comparison of relative differences emissions}
-
-merged_diffs_emis <- merge(merged_SS_before, merged_SS_after, by= c("Abbr", "Scale", "SubCompart", "Species"), suffixes=c(".Before", ".After")) |>
-  select(-EqMass.R.After) |>
-  rename(EqMass.R =EqMass.R.Before) |>
-  mutate(abs_diff_before = EqMass.R-EqMass.Excel.Before) |>
-  mutate(abs_diff_after = EqMass.R-EqMass.Excel.After) |>
-  mutate(relDif_before = abs_diff_before/EqMass.R) |>
-  mutate(relDif_after = abs_diff_after/EqMass.R) |>
-  mutate(relDif_change = relDif_after-relDif_before)
-
-print("Change in relative differences before and after changing excel values (k's)")
-
-knitr::kable(merged_diffs_emis, format="markdown")
-
-```
-
